[RD-1620]: delete margin to fix white space btwn footer & main (backgroundcolor)

--- a/assets/css/imports/layout.css
+++ b/assets/css/imports/layout.css
@@ -5,10 +5,6 @@ body {
   flex-direction: column;
 }
 
-footer {
-  margin-top: auto;
-}
-
 .page-container {
   max-width: 1200px;
   width: 100%;
